--- a/calc_page/manifest.json
+++ b/calc_page/manifest.json
@@ -2,7 +2,7 @@
   "name"              : "3D network analysis",
   "short_name"        : "3D net",
   "description"       : "This app can analize your data with 3D images",
-  "start_url"         : "192.168.2.189/3d_network_analysis/calc_page/main.html",
+  "start_url"         : "https://tkworkfrom220320.com/3d_network_analysis/calc_page/main.html",
   "display"           : "standalone",
   "background_color"  : "#ff0000",
   "theme_color"       : "#ff0000",
